--- a/Style.css
+++ b/Style.css
@@ -76,8 +76,12 @@ input, button, select {
     border: none;
     background-color: #21262d; /* Deep gray for elements */
     color: white;
+    font-family: 'Orbitron', sans-serif;
     cursor: pointer;
     transition: all 0.2s ease;
+}
+option, label {
+    font-family: 'Orbitron', sans-serif;
 }
 .baton{
     margin: 5px;
@@ -86,6 +90,7 @@ input, button, select {
     border: none;
     background-color: #21262d; /* Deep gray for elements */
     color: white;
+    font-family: 'Orbitron', sans-serif;
     cursor: pointer;
     transition: all 0.2s ease;
 }
