--- a/tictactoe.css
+++ b/tictactoe.css
@@ -33,3 +33,13 @@
 .controls {
     margin-bottom: 10px;
 }
+.rest {
+    color: white;
+    border: 2px solid transparent;
+    transition: border 0.2s ease;
+}
+
+    .rest:hover {
+        border: 2px solid #004080;
+        border-radius: 5px;
+    }
