--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body, html {
 .logo {
     width: 50px; /* Фиксированная ширина */
     height: 50px; /* Фиксированная высота */
-    background-image: url('logo.png');
+    background-image: url('../images/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     margin-right: 20px;
