--- a/css/durak.css
+++ b/css/durak.css
@@ -14,6 +14,18 @@
     min-height: 70px;
     margin: 10px 0;
 }
+.stock {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+.deck-count {
+    color: #c9d1d9;
+    margin-left: 5px;
+}
+.trump-card {
+    margin-left: 10px;
+}
 .pair {
     display: flex;
     flex-direction: column;
