Show trump suit after deck empty

--- a/css/durak.css
+++ b/css/durak.css
@@ -26,6 +26,9 @@
 .trump-card {
     margin-left: 10px;
 }
+.trump-indicator {
+    margin-left: 10px;
+}
 .pair {
     display: flex;
     flex-direction: column;
