--- a/css/durak.css
+++ b/css/durak.css
@@ -7,6 +7,8 @@
 .hand {
     display: flex;
     margin: 10px 0;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .table {
     display: flex;
