--- a/css/uno.css
+++ b/css/uno.css
@@ -67,3 +67,35 @@
     cursor: pointer;
     font-size: 0;
 }
+
+.draw-select {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.draw-select.hidden {
+    display: none;
+}
+
+.draw-select .card {
+    width: 60px;
+    height: 90px;
+    margin: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+.draw-select .drawn-card {
+    cursor: default;
+}
