--- a/css/uno.css
+++ b/css/uno.css
@@ -111,3 +111,38 @@
     background-color: #000;
     color: white;
 }
+
+.stack-select {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.stack-select.hidden {
+    display: none;
+}
+
+.stack-select .card {
+    width: 60px;
+    height: 90px;
+    margin: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+.stack-select .options {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
