--- a/css/buckshot.css
+++ b/css/buckshot.css
@@ -18,6 +18,20 @@
     width: 150px;
     text-align: center;
 }
+.hp-bar {
+    width: 100px;
+    height: 10px;
+    background: #333;
+    border: 1px solid #555;
+    margin: 4px auto;
+    position: relative;
+}
+.hp-fill {
+    background: red;
+    height: 100%;
+    width: 100%;
+    transition: width 0.3s;
+}
 .items {
     margin-top: 10px;
     display: flex;
