--- a/css/buckshot.css
+++ b/css/buckshot.css
@@ -76,7 +76,7 @@
 }
 
 .shell.current {
-    outline: 1px solid rgba(255,255,255,0.3);
+    outline: 2px solid #0f0;
 }
 
 .bs-container.colorblind .shell.live {
